# RayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: color.h  hittable.h  light.h  main.cpp  material.h  ray.h  scene.h  sphere.h  texture.h  vec3.h
stages/: showcase_main.cpp
